--- a/ISM/hw4/Untitled.ipynb
+++ b/ISM/hw4/Untitled.ipynb
@@ -2,24 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/pymodules/python2.7/matplotlib/__init__.py:758: UserWarning: Found matplotlib configuration in ~/.matplotlib/. To conform with the XDG base directory standard, this configuration location has been deprecated on Linux, and the new location is now '/home/ngaravito/.config'/matplotlib/. Please move your configuration there to ensure that matplotlib will continue to find it in the future.\n",
+      "  _get_xdg_config_dir())\n",
+      "/usr/local/lib/python2.7/dist-packages/IPython/kernel/__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated. You should import from ipykernel or jupyter_client instead.\n",
+      "  \"You should import from ipykernel or jupyter_client instead.\", ShimWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/IPython/kernel/__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated. You should import from ipykernel or jupyter_client instead.\n",
-      "  \"You should import from ipykernel or jupyter_client instead.\", ShimWarning)\n"
      ]
     }
    ],
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -49,7 +51,7 @@
        "0.99224951610886336"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -73,13 +75,14 @@
     "    Tr = Tr * units.K\n",
     "    h = constants.h\n",
     "    Kb = constants.k_B\n",
-    "    T_ex = h*nu / Kb * 1 / log( h * nu / Kb *  1 / (Tr  + h*nu/Kb * ( 1 / (exp(h*nu/(Kb*Tbg)) - 1 )) ) )\n",
+    "    Log = log( h * nu * (exp(h * nu/ (Kb * Tr) ) - 1 ) / ( Kb * Tr * (exp(h * nu/ (Kb * Tr) ) - 1) + h * nu ) + 1)\n",
+    "    T_ex = h * nu / Kb * 1 / Log\n",
     "    return T_ex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -87,13 +90,13 @@
     {
      "data": {
       "text/latex": [
-       "$10.831331 \\; \\mathrm{K}$"
+       "$4.4386842 \\; \\mathrm{K}$"
       ],
       "text/plain": [
-       "<Quantity 10.831330713323817 K>"
+       "<Quantity 4.438684221272808 K>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +107,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def A_coeff(nu, J):\n",
+    "    nu = nu * units.GHz\n",
+    "    nu = nu.to(1/units.s)\n",
+    "    h = constants.h\n",
+    "    c = constants.c\n",
+    "    Me = 1E-18 * units.cm**(3/2.0) * units.g**0.5 / units.s\n",
+    "    MU = Me**2 * J / (2*J + 1)\n",
+    "    A = 64 * pi**4 * nu**3 / (3 * h * c**3) * MU \n",
+    "    A = A.to(1 / (units.m**2 * units.s))\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$0.043793777 \\; \\mathrm{\\frac{1}{s\\,m^{2}}}$"
+      ],
+      "text/plain": [
+       "<Quantity 0.043793777396991945 1 / (m2 s)>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_coeff(97.98, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -118,25 +166,30 @@
     "    h = constants.h\n",
     "    Kb = constants.k_B\n",
     "    c = constants.c\n",
-    "    A = 1.714E-5\n",
+    "    A = 1.714E-5 * units.Hz\n",
     "    Eu = h * nu\n",
     "    #print Eu\n",
     "    Tex =  Tex * units.K\n",
-    "    Q = 8.316 # See http://spec.jpl.nasa.gov/ftp/pub/catalog/doc/d044001.pdf\n",
+    "    Q = 8.316 /2.0 # See http://spec.jpl.nasa.gov/ftp/pub/catalog/doc/d044001.pdf\n",
     "    g = 5 # See Yansey's paper\n",
     "    Bv_tex = 2 * h * nu**3 / c**2.0 * 1.0 / (exp(h*nu/(Kb*Tex)) - 1.0)\n",
-    "    print Bv_tex\n",
+    "    #print Bv_tex\n",
     "    #print Bv_tex\n",
     "    Jv_tex = h * nu / Kb * 1 / (exp(h*nu/(Kb*Tex)) - 1 )\n",
     "    Jv_tbg = h * nu / Kb * 1 / (exp(h*nu/(Kb*Tbg)) - 1 )\n",
     "    #print (Jv_tex - Jv_tbg) * g * A * h * c\n",
-    "    Ntot = 4 * pi / (h * c) * Q * exp(Eu / (Kb * Tex)) / (g * A) * Bv_tex / (Jv_tex - Jv_tbg) * 0.5 \n",
-    "    return Ntot"
+    "    Nu = 4 * pi / (h * c * A) * Bv_tex / (Jv_tex - Jv_tbg) * 1000 * units.K * units.m / units.s\n",
+    "    Nu = Nu.to(1 / units.cm**2)\n",
+    "    print Nu\n",
+    "    Ntot = 4 * pi / (h * c) * Q * exp(Eu / (Kb * Tex)) / (g * A) * Bv_tex / (Jv_tex - Jv_tbg) * 1000 * units.K * units.m / units.s\n",
+    "    tau = 4.86\n",
+    "    Ntot_t = Ntot * tau / (1 - exp(-tau))\n",
+    "    return Ntot, Ntot_t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -145,25 +198,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.55094523562e-17 J / m2\n"
+      "1.87909403093e+12 1 / cm2\n"
      ]
     },
     {
      "data": {
-      "text/latex": [
-       "$1.5899022 \\times 10^{13} \\; \\mathrm{\\frac{1}{K\\,m^{3}}}$"
-      ],
       "text/plain": [
-       "<Quantity 15899021679620.564 1 / (K m3)>"
+       "(<Quantity 4.517120197173363e+16 1 / (Hz m2 s)>,\n",
+       " <Quantity 2.2124681143058355e+17 1 / (Hz m2 s)>)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "N_tot_thin(10.83, 97.982, 2.76, 2 )"
+    "N_tot_thin(4.43, 97.982, 2.76, 2 )"
    ]
   },
   {
