--- a/Stars/dispersion.tex
+++ b/Stars/dispersion.tex
@@ -85,4 +85,38 @@ The modes with the $+$ sign in Eq.\ref{eq:sol} are called
 \textbf{p-modes} while the solutions with $-$ are called
 \textbf{g-modes}
 
+\subsection{Relativistic effects on the Dispersion Relation}
+
+When general relativistic effects are taking into account 
+
+\begin{equation}
+\kappa^2 = \dfrac{GM}{r^3}\left( 1 + \dfrac{a}{\hat{r}^{3/2}}
+\right)^{-2} \left(1 - \dfrac{6}{\hat{r}} + \dfrac{8a}{\hat{r}^{3/2}}
+- \dfrac{3a^2}{\hat{r}^2}  \right)
+\end{equation}
+
+Where $a$ is a dimensionless parameter specifying the amount of
+angular momentum of the central object if $a=0$ the object is rotating
+and if $a=1$ the central object have the maximum rotation (the case of
+extreme Kerr).
+
+\begin{equation}
+\hat{r} = \dfrac{r}{GM/c^2}
+\end{equation}
+
+\begin{equation}
+\Omega_{}^2 = \Omega_{K}^2 \left(1 - \dfrac{4a}{\hat{r}^{3/2} +
+\dfrac{3a^2}{\hat{r}^2}} \right)
+\end{equation}
+
+\begin{equation}
+\Omega_K^2 = \dfrac{GM}{r^3} \left[ 1 + \dfrac{a}{(8
+\hat{r}^3)^{1/2}}\right]^{-1}
+\end{equation}
+
+\begin{equation}
+(\tilde{\omega}^2 + \kappa^2)(\tilde{\omega}^2 - n \Omega_{}^2) =
+\tilde{\omega}^2 c_s^2 k_{r}^2
+\end{equation}
+
 \end{document}
