--- a/Stars/project/dispersion.tex
+++ b/Stars/project/dispersion.tex
@@ -101,6 +101,42 @@ extreme Kerr).
 \end{equation}
 
 \begin{equation}
-(\tilde{\omega}^2 + \kappa^2)(\tilde{\omega}^2 - n \Omega_{}^2) =
+(\tilde{\omega}^2 + \kappa^2)(\tilde{\omega}^2 - n \Omega_{\bot}^2) =
 \tilde{\omega}^2 c_s^2 k_{r}^2
 \end{equation}
+
+\begin{equation}
+(\tilde{\omega}^2 - \kappa^2)(\tilde{\omega}^2 - n\Omega_{\bot}^2 ) =
+\tilde{\omega}^2 c_s^2 k_r^2
+\end{equation}
+
+In Keplerian disks $\kappa \sim \Omega \sim \Omega_K$ and
+$\Omega_{\bot}$ 
+
+\section{Low-Frequency Corrugation Waves:}
+
+\begin{equation}
+\omega \sim -\dfrac{1}{2} \Omega \dfrac{\Omega^2}{\Omega^2 -
+\kappa^2} \dfrac{k_r^2 c_s^2 }{\Omega^2} + \dfrac{1}{2} \Omega
+\dfrac{\Omega^2 - \Omega_{\bot}^2}{\Omega^2}
+\end{equation}
+
+
+\section{Trapped Oscillations in Relativistic Disks}
+
+\subsection{Fundamental Mode}
+
+For the fundamental mode $n=0$ the dispersion relation reduces to:
+
+\begin{equation}
+\omega^2 = \kappa^2 + c_s^2k_r^2
+\end{equation}
+
+This is the same dispersion relation for the non-relativistic
+case but $\kappa$ is different see \verb+\ref{fig:X}+.
+Because $k_r > 0$ the dispersion relation implies $\omega^2 >
+\kappa^2$, The region in which this is satisfied is plotted in 
+\verb+\ref{fig:X2}+. The propagation regions are three which
+are explained as follows, In 1 the 
+
+
