--- a/Stars/project/oscillations.tex
+++ b/Stars/project/oscillations.tex
@@ -1,3 +1,29 @@
 \section{Types of Oscillations}
 
+Oscillations with $m=0$ that satisfy the dispersion relation
+\ref{eq:dispersion} would lead to short wave-lengths oscillations,
+which are not interesting, since they can't be observed. Therefore
+oscillations of interest would be either \textbf{global} or
+\textbf{trapped}. Global oscillations are low frequency and
+one armed $m=1$. If $n=0$ they are an eccentric deformation of the 
+disk plane, while the $n=1$ are a corrugation wave.
+
+\subsection{Eccentric deformations of the disk}
+
+The dispersion relation for $m=1$ and $n=0$ is:
+
+\begin{equation}
+(\omega - \Omega)^2 - \kappa^2 = k_r^2c_s^2
+\end{equation}
+
+and it reduces to:
+
+\begin{equation}
+\omega \sim - \dfrac{1}{2} \Omega \left( \dfrac{k_r
+c_s}{\Omega}\right)^2
+\end{equation}
+
+The $m=1$ perturbation is
+
+\subsection{tidally deformed disks}
 
