--- a/Stars/project/ms.tex
+++ b/Stars/project/ms.tex
@@ -58,25 +58,24 @@
 %	TITLE
 %----------------------------------------------------------------------------------------
 
-\title{\textbf{Think disk oscillations, dynamics and excitation
-processes.} % Subtitle
+\title{\textbf{Thin disk oscillations, dynamics and excitation processes.} % Subtitle
 
 \author{\textsc{Juan Nicol\'as Garavito Camargo } % Author
 \\{\textit{ASTR 545: Final project\\}
 \textit{Stewart observatory, University of Arizona}}} % Institution
 
-%\date{August, 2015} % Date
+\date{August, 2015} % Date
 
 %----------------------------------------------------------------------------------------
-
 
 \begin{document}
 
 \maketitle
 
 \input{motivation}
-\input{analytical}
 \input{dispersion}
+\input{oscillations}
+\input{appendix}
 
 %\bibliographystyle{unsrtnat}
 %\bibliography{referencesDMMW}
