--- a/Stars/project/dispersion.tex
+++ b/Stars/project/dispersion.tex
@@ -1,43 +1,49 @@
 \section*{The dispersion relation of disks:}
 
-\begin{equation}
-\tilde{\omega} = \omega - m\Omega
-\end{equation}
-
-Epicyclic frequency:
-
-\begin{equation}
-\kappa^2 = 2\Omega \left( 2\Omega + r \dfrac{d\Omega}{dr}  \right)
-\end{equation}
-
-Dispersion relation:
+To study the oscillations generated in the disk
+we use the dispersion relation derived in the appendix.
+Which is given by the expression:
 
 \begin{equation}\label{eq:dispersion}
 (\tilde{\omega}^2 - \kappa^2)(\tilde{\omega}^2 - n\Omega_k^2) =
 \tilde{\omega}^2 c_s^2 k_r^2
 \end{equation}
 
-To understand this dispersion relation it is better to study the limit
-cases:
+Where $\tilde{omega}$ is related with number of arms of the
+perturbation as:
 
-In the case of oscillations in the plane if the disk
-$n=0$ Eq.\ref{eq:dispersion} reduced to:
+\begin{equation}
+\tilde{\omega} = \omega - m\Omega
+\end{equation}
+
+And the epicyclic frequency is:
+
+\begin{equation}
+\kappa^2 = 2\Omega \left( 2\Omega + r \dfrac{d\Omega}{dr}  \right)
+\end{equation}
+
+To understand the physical meaning of this dispersion relation lets
+study some limiting cases. First if the oscillations take place in 
+the plane of the disk $n=0$ the relation Eq.\ref{eq:dispersion}
+reduces to:
 
 \begin{equation}\label{eq:disp1}
 \tilde{\omega}^2 = \kappa^2 + k_r^2 c_s^2
 \end{equation}
 
-This condition is known as \textbf{inertial-acoustic} waves
-and corresponds to the oscillations of a fluid element that was
-displaced in the radial direction, the oscillations arise to the
-resorting forces that brings back the fluid to the initial position.
+This condition is known as the \textbf{inertial-acoustic} waves,
+and corresponds to the oscillations of a fluid element that is
+displaced in the radial direction. The oscillations arise due to the
+resorting force due to rotation that brings back the fluid to the
+initial position.
 The oscillation frequency is the epicyclic frequency $\kappa(r)$ first
 term in the right part of equation \ref{eq:disp1}. While the second
 term corresponds to acoustic oscillations due to the restoring force
 from compressible fluids.
 
-Now in the long-wavelength limit ($k_r=0$) Eq.\ref{eq:disp1} is
-reduced to:
+If we consider oscillations in the vertical direction ($k_r=0$) the
+dispersion relation Eq.\ref{eq:disp1} reduces to the following
+expressions:
 
 \begin{equation}
 \tilde{\omega}^2 = \kappa^2
@@ -49,27 +55,38 @@ reduced to:
 
 Which corresponds to vertical oscillations in the disk, due to a
 perturbation of a fluid element in the vertical direction. The
-vertical component of the gravitational force in the restore force
+vertical component of the gravitational force in the restoring force
 that returns the fluid element to the plane of the disk. The frequency
-of this oscillations is $\Omega_K$.
+of this oscillations is represented by $\Omega_K$.
 
-This two oscillations are coupled in the form $(\tilde{\omega}^2 -
+
+The above two limiting cases are present at the same time in disks.
+The two oscillations are coupled in the form $(\tilde{\omega}^2 -
 \kappa^2)(\tilde{\omega}^2 - n\Omega_k^2)$ in the dispersion relation
 Eq.\ref{eq:dispersion}. Vertical oscillations induce perturbations
-in the radial direction due to the inhomogeneities in the disk. The
-coupling is stronger when the radia wavelength is shorter and the
+in the radial direction and radial oscillations induce vertical
+oscillations due to inhomogeneities in the disk. The
+coupling is stronger when the radial wavelength is shorter and the
 acoustic speed is faster.
 
-The solutions for Eq.\ref{eq:dispersion} are:
+The dispersion relation Eq.\ref{eq:dispersion} is quadratic for
+$\tilde{\omega}^2$ and the solutions are:
 
 \begin{equation}\label{eq:sol}
 \tilde{\omega}^2 = \dfrac{(n\Omega_k^2 + \kappa^2 + c_s^2 K_r^2) \pm
-\sqrt( - 4\kappa^2n\Omega_k^2)}{2}
+\sqrt{( - 4\kappa^2n\Omega_k^2)}}{2}
 \end{equation}
 
-The modes with the $+$ sign in Eq.\ref{eq:sol} are called
+The modes with the  sign in Eq.\ref{eq:sol} are called
 \textbf{p-modes} while the solutions with $-$ are called
 \textbf{g-modes}
+
+\begin{figure}
+\centering
+\includegraphics[scale=0.5]{waves.png}
+\end{figure}
+
+
 
 \subsection{Relativistic effects on the Dispersion Relation}
 
@@ -112,6 +129,11 @@ extreme Kerr).
 
 In Keplerian disks $\kappa \sim \Omega \sim \Omega_K$ and
 $\Omega_{\bot}$ 
+
+\begin{figure}
+\centering
+\includegraphics[scale=0.3]{relativsitc.png}
+\end{figure}
 
 \section{Low-Frequency Corrugation Waves:}
 
